--- a/DataProcess/Readme
+++ b/DataProcess/Readme
@@ -10,9 +10,13 @@ PeaksResampling - Añade una matriz con un resampling de los picos (PeaksResampl
 PeaksPCA - Añade al fichero los picos despues de aplicarles el PCA y mover la basal (PeaksResamplePCA)
 PeaksClusteringValidateWhole - Estima el numero de clusters para los picos (todos los picos de todas las fases
                                 juntos)
-PeaksClusteringWhole - Genera el clustering para el primer tramo del experimento y clasifica con el el resto de
+PeaksClusteringHistoSort - Genera el clustering para el primer tramo del experimento y clasifica con el el resto de
                        fases, genera grafico de los centroides del clustering de la primera fase e histogramas de
-                       frecuencias de picos para todas
+                       frecuencias de picos para todas los tramos del experimento ordenandolas por la altura de los picos
+
+PeaksGenerateClustering - Graba en el primer tramo del experimento los centroides del clustering usando el numero de
+                          clusters establecido para cada sensor, los centroides se graban segun el orden ascendente
+                          de la altura maxima del centroide
 *********************
 Alternativas
 
