--- a/SequentialAnalysis/Readme
+++ b/SequentialAnalysis/Readme
@@ -9,3 +9,12 @@ PeaksSyncro :
     funcion synch_coincidence_matrix -
                         - Genera un fichero para cada parte del experimento con la frecuencia de coincidencia en las
                         sincronizaciones entre los diferenctes sensores
+
+PeaksSynchroContingency :
+    Genera un fichero para cada tramo del experimento con la tabla de contingencia de para cada parde sensores de las
+    sincronizaciones de las clases del diccionario de picos
+
+PeaksSyncroPlot :
+    Genera ficheros con los graficos de los picos sincronizados.
+    Atencion: Los parametros estan harcoded para 10000Hz con ventanas de 2000 puntos centradas en la media de los
+              tiempos de los picos sincronizados
